# koastcast

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  IOS_SPEC.md  NUC_SETUP.md  PRODUCT_ROADMAP.md  PROMPT_PHASE1.md  PROMPT_PHASE2.md  PROMPT_PHASE3_4.md  RUNBOOK.md  SERVICES_AUDIT.md  SNOW_PLATFORM.md  SURFER_RESEARCH.md  TASKS.md  V2.md  docker-compose.yml  inject-secrets.sh  package.json  start.sh
.playwright-mcp/: page-2026-05-04T13-50-53-243Z.yml  page-2026-05-04T13-54-32-244Z.yml  page-2026-05-04T13-54-57-741Z.yml  page-2026-05-04T13-55-07-437Z.yml  page-2026-05-04T13-55-29-496Z.yml  page-2026-05-04T13-55-42-157Z.yml  (+66 more)
apps/api/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
apps/api/config/: weights.example.py
apps/api/db/: supabase_client.py  timeseries.py
apps/api/middleware/: api_key.py  auth.py
apps/api/models/: schemas.py
apps/api/routers/: buoys.py  forecast.py  gear.py  insights.py  nlq.py  optimal.py  safety.py  sessions.py  snow.py  spots.py  stoke.py  swell_events.py
apps/api/scheduler/: jobs.py
apps/api/services/: bias_correction.py  crowd_model.py  ensemble.py  gear_recommender.py  llm.py  ndbc.py  nowcast.py  open_meteo.py  optimal_windows.py  safety.py  stoke_score.py  surf_insights.py  swan_runner.py  swell_tracker.py  tide_stations.py  tides.py  trust.py
apps/api/services/snow/: snotel.py
apps/api/tests/: test_bias_correction.py  test_ndbc.py  test_nowcast.py  test_open_meteo_swell2.py  test_stoke_score.py  test_trust.py
apps/api/tests/fixtures/: 46026.data_spec  46026.txt
data/: resorts.json  spots.json
(+171 files in other folders)
